--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,12 @@ colorama==0.2.5
 curtsies==0.2.6
 futures==3.0.5
 html5lib==0.999
+py==1.4.31
 pymongo==3.3.0
+pytest==3.0.4
 python-dateutil==2.5.3
 requests==2.2.1
 six==1.5.2
 tomorrow==0.2.4
 urllib3==1.7.1
 wcwidth==0.1.7
-wheel==0.24.0
